--- a/public_html/templates/lecturers.html
+++ b/public_html/templates/lecturers.html
@@ -5,7 +5,7 @@
 
         <div id="table-lecturers">
 
-        <h1 class="btn-lg btn-info">Lectures</h1>
+        <h1 class="btn-lg btn-info">Lectures7</h1>
 
             <table class="table table-bordered">
                 <thead style="text-align: center">
