--- a/public_html/templates/events.html
+++ b/public_html/templates/events.html
@@ -9,7 +9,7 @@
 
     <div id="table-events" >
 
-        <h1 class="btn-lg btn-info">Events</h1>
+        <h1 class="btn-lg btn-info">Events9999</h1>
 
         <table class="table table-bordered">
             <thead style="text-align: center">
